--- a/glide.yaml
+++ b/glide.yaml
@@ -5,3 +5,5 @@ import:
 - package: gopkg.in/yaml.v2
 - package: github.com/jinzhu/gorm
   version: ~1.0.0
+- package: github.com/urfave/cli
+  version: ~1.20.0
