--- a/glide.yaml
+++ b/glide.yaml
@@ -7,3 +7,5 @@ import:
   version: ~1.0.0
 - package: github.com/urfave/cli
   version: ~1.20.0
+- package: github.com/satori/go.uuid
+  version: v1.1.0
